auth is off
